-Updated / fixed _Beckett's RAC models
-Fixed HE filler mass not factoring into APHE penetration
-Fixed standalone clutch not transmitting torque
-Fixed engines that require fuel not shutting off when out of fuel
-Fixed a few typos
-Buffed 105mm howitzer (1810 kg -> 1480 kg, longer round, higher max propellant)
-Buffed 122mm howitzer (3520 kg -> 3420 kg, longer round, higher max propellant)
-Rolled back change to MG; they can now fire APHE and HE again

*r536
-Added double clutch funtionality to double diff gearboxes

*r537
-Replaced instances of deprecated networking functions
-Replaced instances of NWInt with NWFloat where needed
-Added bit of text on ACF tool indicating when a gun is parentable
-Added bit of text detailing crate info when setting up ammo
-Added functions acfFlyInertia() and acfFlyMass(), courtesy of EpicG
-Added functions acfLinkTo() and acfUnlinkFrom(), courtesy of Starkkz
-Updated ACF tool to freeze ents on spawn
-Updated smoke, can now adjust burst vs duration
-APHE, HE blacklisted for MG and RAC (I mean it this time!!)
-MG 7.62, 12.7, and 14.5 are now parentable
-Gearbox reaction torque now accounts for nonphysical mass
-Engines that require fuel now show fuelled stats on overlay
-Electrics are now much more durable in combat
-Fixed diesels losing torque faster than petrols when taking damage
-Fixed HE detonating inside bounding box of a prop being automatic hit (unrelated to HE bug)
-Fixed crate weight not updating if new ammo setup is lighter
-Fixed typo in e2 func acfFuelUse() that caused it to always return 0

*r542
-Fixed some effect errors, courtesy of Python1320
-Fixed issue with unitialized var in guns

*r543
-Added EA2 acf component, courtesy of FreeeFry
-Added ability for rounds to ricochet off brushwork/displacements
-Updated tracer effect
-Renamed "Any" fueltype to "Multifuel"
-Fixed bug with parented mass lookup that caused massive lag on high rof weapons
-Fixed bug with parented weapons applying too much force