@@ -9,7 +9,7 @@ ACF_DefineEngine( "4.3-V10", {
 	fuel = "Petrol",
 	enginetype = "GenericPetrol",
 	weight = 160,
-	torque = 300,
+	torque = 288,
 	flywheelmass = 0.2,
 	idlerpm = 900,
 	peakminrpm = 3500,
@@ -26,7 +26,7 @@ ACF_DefineEngine( "8.0-V10", {
 	fuel = "Petrol",
 	enginetype = "GenericPetrol",
 	weight = 300,
-	torque = 520,
+	torque = 490,
 	flywheelmass = 0.5,
 	idlerpm = 750,
 	peakminrpm = 3400,
@@ -42,11 +42,11 @@ ACF_DefineEngine( "22.0-V10", {
 	category = "V10",
 	fuel = "Multifuel",
 	enginetype = "GenericDiesel",
-	weight = 1400,
-	torque = 2750,
+	weight = 1600,
+	torque = 2605,
 	flywheelmass = 5,
-	idlerpm = 425,
-	peakminrpm = 600,
-	peakmaxrpm = 1800,
+	idlerpm = 525,
+	peakminrpm = 750,
+	peakmaxrpm = 1900,
 	limitrpm = 2500
 } )
